--- a/lm-composed/etc/slurm-config/slurm.conf
+++ b/lm-composed/etc/slurm-config/slurm.conf
@@ -12,20 +12,20 @@ SlurmUser=slurm
 #SlurmdUser=root
 SlurmctldPort=6817
 SlurmdPort=6818
-AuthType=auth/munge
-AuthInfo=socket=/var/run/munge/munge.socket.2
+AuthType=auth/slurm
+CredType=cred/slurm
 AuthAltTypes=auth/jwt
-AuthAltParameters=jwt_key=/var/spool/slurmctld/jwt_hs256.key
+AuthAltParameters=jwt_key=/etc/slurm/jwt_hs256.key
 #JobCredentialPrivateKey=
 #JobCredentialPublicCertificate=
 StateSaveLocation=/var/spool/slurmctld
 SlurmdSpoolDir=/var/spool/slurmd
 SwitchType=switch/none
-MpiDefault=pmi2
+MpiDefault=none
 SlurmctldPidFile=/var/run/slurmctld.pid
 SlurmdPidFile=/var/run/slurmd.pid
-ProctrackType=proctrack/linuxproc
-PluginDir=/usr/lib/x86_64-linux-gnu/slurm-wlm
+ProctrackType=proctrack/pgid
+PluginDir=/opt/slurm/view/lib/slurm
 #FirstJobId=
 ReturnToService=0
 #MaxJobCount=
@@ -60,8 +60,9 @@ SchedulerType=sched/backfill
 #SchedulerAuth=
 #SchedulerPort=
 #SchedulerRootFilter=
-SelectType=select/cons_res
-SelectTypeParameters=CR_CPU_Memory
+#SelectType=select/cons_res
+#SelectTypeParameters=CR_CPU_Memory
+SelectType=select/linear
 #PriorityType=priority/multifactor
 #PriorityDecayHalfLife=14-0
 #PriorityUsageResetPeriod=14-0
@@ -88,7 +89,8 @@ AccountingStorageType=accounting_storage/slurmdbd
 AccountingStorageHost=slurmdbd
 #
 # COMPUTE NODES
-NodeName=c[1-2] RealMemory=1000 State=UNKNOWN CPUs=4
+# Use Sockets/CoresPerSocket/ThreadsPerCore to match container's view of hardware
+NodeName=c[1-2] RealMemory=1000 State=UNKNOWN Sockets=1 CoresPerSocket=4 ThreadsPerCore=2
 #
 # PARTITIONS
 PartitionName=compute Default=yes Nodes=c[1-2] Priority=50 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
