--- a/lm-composed/etc/slurm-config/slurmdbd.conf
+++ b/lm-composed/etc/slurm-config/slurmdbd.conf
@@ -12,10 +12,10 @@
 #StepPurge=1
 #
 # Authentication info
-AuthType=auth/munge
-AuthInfo=socket=/var/run/munge/munge.socket.2
+AuthType=auth/slurm
+#AuthInfo=socket=/var/run/munge/munge.socket.2
 AuthAltTypes=auth/jwt
-AuthAltParameters=jwt_key=/var/spool/slurmctld/jwt_hs256.key
+AuthAltParameters=jwt_key=/etc/slurm/jwt_hs256.key
 
 # slurmDBD info
 DbdAddr=slurmdbd
@@ -27,7 +27,7 @@ DebugLevel=4
 #DefaultQOS=normal,standby
 LogFile=/var/log/slurm/slurmdbd.log
 PidFile=/var/run/slurmdbd.pid
-PluginDir=/usr/lib/x86_64-linux-gnu/slurm-wlm
+PluginDir=/opt/slurm/view/lib/slurm
 #PrivateData=accounts,users,usage,jobs
 #TrackWCKey=yes
 #
