--- a/lm-simulator-api/pyproject.toml
+++ b/lm-simulator-api/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "yarl>=1.20.1",
     "asyncpg>=0.30.0",
     "aiosqlite>=0.20.0",
+    "psycopg2-binary>=2.9.10",
     "py-buzz>=7.3.0",
     "toml>=0.10.2",
     "httpx>=0.28.1",
