--- a/lm-agent/Dockerfile
+++ b/lm-agent/Dockerfile
@@ -18,18 +18,17 @@ COPY ./lm-prolog-epilog-api /app/lm-prolog-epilog-api
 
 # Install all workspace packages with Python in a portable location
 ENV UV_PYTHON_INSTALL_DIR=/app/.python
-RUN uv sync --frozen --no-dev --no-editable
-
+RUN uv sync --python 3.12 --managed-python --frozen --no-dev --no-editable
 
 FROM ubuntu:resolute AS runner
 
 WORKDIR /app
 
-# Install curl for health checks and tzdata for timezone support
-RUN apt update && apt install -y curl tzdata && rm -rf /var/lib/apt/lists/*
-
-# Create slurm user (needed for Slurm client commands to read slurm.conf)
-RUN groupadd -r slurm && useradd -r -g slurm slurm
+# Install curl for health checks + tzdata
+RUN apt update && apt install -y curl tzdata \
+    && rm -rf /var/lib/apt/lists/* \
+    && groupadd -g 401 -r slurm \
+    && useradd -r -u 401 -g 401 slurm
 
 # Copy virtual environment and uv-managed Python from builder
 COPY --from=builder /app/.venv /app/.venv
@@ -42,18 +41,5 @@ RUN mkdir -p /var/log/license-manager-agent /app/data
 
 # Copy entrypoint script
 COPY ./lm-agent/entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
-
-# Environment variable to conditionally enable lm-simulator
-ENV ENABLE_LM_SIMULATOR=false
-
-# Environment variable to conditionally enable prolog/epilog API
-ENV ENABLE_PROLOG_EPILOG_API=false
-
-# Simulator API port (when enabled)
-EXPOSE 8080
-
-# Prolog/Epilog API port (when enabled)
-EXPOSE 8081
 
 ENTRYPOINT ["/app/entrypoint.sh"]
